# whisperX-nemo

./: .gitignore  conversation.json  pyproject.toml
whisperx/: diarize.py  nemo.py  nemo_diarization.py
whisperx/nemo_config/: diar_infer_general.yaml  diar_mdss_meeting.yaml
